# bins

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  HANDPORT_XHR_FINDINGS.md  PROJECT_PLAN.md  README.md  badge_coverage.json  bins_info+with_uprn.csv  council_types.py  docker-compose.yml  generate_council_yaml.py  household_waste_info.ipynb  lefthook.yaml  package-lock.json  package.json  pyproject.toml  uprn_get.py
.claude/: settings.json
.pre-commit-scripts/: README.md  check-councils-json.sh
UKBinCollectionData/: pyproject.toml
api/: config.py  logging_config.py  main.py  models.py  routes.py  scraper_registry.py
bin_collection/: pyproject.toml
bins-website/: .gitignore  README.md  about.html  app.js  biome.json  index.html  package.json
data/: nspl.parquet  postcodes_by_council.csv
deploy/: deployment.md  deployment.py
extraction/: 01_extract_info.py  02_playwright_run.py  03_analyze_network_logs.py  04_yaml_conversion.py  05_check_cors.py  README.md  analyze_network_logs.py  council_extraction_results.json  extract_info.py  playwright_network_logs.json  playwright_run.py  structured_output.py  yaml_conversion.py
monkey_patch/: common.py  setup.sh
pipeline/: lad_overrides.json  overrides.json  routing.json  shared.py  sync_all.py
scripts/: generate_admin_lookup.py  generate_sankey.py  sync_passthrough_urls.sh
src/: bin_lookup.py  main.py  pydantic_agent.py  run_single_council.py  scraping_councils.py  uprn_lookup.py
tests/: conftest.py  integration_output.json  playwright_output.json  (+12 more)
(+1573 files in other folders)
