[project]
name = "bins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastexcel>=0.14.0",
    "google-auth>=2.40.3",
    "ipykernel>=6.29.5",
    "marimo>=0.14.11",
    "mcp>=1.11.0",
    "polars>=1.31.0",
    "pydantic-ai>=0.4.2",
    "ruff>=0.12.3",
]
